--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             color: #4a5d23; 
             margin: 0;
             text-shadow: 2px 2px 0px rgba(255,255,255,0.5);">
-            Ali <span style="font-size: 3rem; color: #a3b18a;">🌿</span>
+            Ali <span style="font-size: 3rem; color: #ffffff; text-shadow: 0 0 5px rgba(0,0,0,0.2);">🤍</span>
         </h1>
     </div>
 
@@ -132,8 +132,6 @@
                       transform="rotate(-5 125 125)">
                     Ali
                 </text>
-                
-                <path d="M145,105 C155,100 160,110 145,120 C130,110 135,100 145,105" fill="#fff" transform="translate(10, -10)"/>
             </g>
 
             <path d="M180,70 Q190,90 185,110" fill="none" stroke="white" stroke-width="5" stroke-linecap="round" opacity="0.6"/>
